assets/less/document-list.less
@charset "utf-8";
@import "variables.less";
@import "spinner.less";
@import "animations.less";
@import "../../bower_components/anyfetch-assets/stylesheets/style.less";

ul.anyfetch-pipe-list {
  list-style: none;
  li + li:before {
    content: "  |  ";
  }
}

.anyfetch-name {
  text-transform: capitalize;
}

.anyfetch-email {
  &:before, &:after {
    content: "";
  }
}

.hidden {
  display: none;
}

#context {
  display: none;
  i {
    float: left;
  }

  .context {
    padding: 16px;
    ul.context-selection {
      list-style: none;
      margin: 0;
      padding: 0;

      li.context-item {
        display: inline
      }
      li.context-item:hover {
        cursor: pointer;
      }
      li.context-item.inactive {
        span {
          text-decoration: line-through;
          opacity: .6;
        }
      }
    }
  }
}

#errors {
  width: 100%;
  padding: 17px;
  background: @errorBackground;
  color: @errorColor;
  margin: 0px;
  font-weight: 500;

  a {
    color: @errorColor;
    text-decoration: underline;
  }
}

#results {
  overflow-y: auto;
  overflow-x: hidden;

  .table-center {
    min-height: 250px;
    width: 100%;
    display: table;
    text-align: center;
    .cell-center {
      vertical-align: middle;
      display: table-cell;
    }
  }

  .spinner-message {
    margin-top: 10px;
    color: darken(@backgroundColor, 40%)
  }

  #no-results-error {
    color: #ccc;
    text-align: center;
    p {
      margin-top: 0;
      text-transform: uppercase;
      font-size: 2em;
    }
    a {
      color: #999;
      font-size: 1.2em;
      text-decoration: underline;
    }
  }

  #document-list {
    list-style: none;
    margin: 0; padding: 0;

    fieldset {
      border: none;
      text-align: center;
      margin: 12px 10px -8px 10px;
      legend.sliceHeader {
        font-style: .9em;
        width: auto;
        color: #C7C7C7;
        padding: 0px 10px;
      }
    }

    .document-snippet {
      position: relative;
      display: flex;
      align-item: center;
      overflow: hidden;

      margin: 0px 5px 10px 5px;
      padding: @snippetPadding;

      background-color: @snippetBackgroundColor;
      border: @snippetBorder;
      font-weight: 300;
      font-size: .9em;
      border-radius: 3px;

      opacity: 0;
      -webkit-animation: fadein .4s;
      -webkit-animation-fill-mode: forwards;
      -webkit-animation-delay: .150s;
      &:nth-child(1) {
        -webkit-animation-delay: .025s;
      }
      &:nth-child(2) {
        -webkit-animation-delay: .050s;
      }
      &:nth-child(3) {
        -webkit-animation-delay: .075s;
      }
      &:nth-child(4) {
        -webkit-animation-delay: .100s;
      }
      &:nth-child(5) {
        -webkit-animation-delay: .125s;
      }

      .provider-icon {
        float: left;
        width: @snippetBadgeWidth;
        background-repeat: no-repeat;
        background-position: right .5em;
        background-size: 75%;

        &.provider-52bff114c8318c29e9000005 {
          background-image: url(/images/providers/52bff114c8318c29e9000005.svg)
        }
        &.provider-52bff1eec8318cb228000001 {
          background-image: url(/images/providers/52bff1eec8318cb228000001.svg)
        }
        &.provider-53047faac8318c2d65000096 {
          background-image: url(/images/providers/53047faac8318c2d65000096.svg)
        }
        &.provider-53047faac8318c2d65000097 {
          background-image: url(/images/providers/53047faac8318c2d65000097.svg)
        }
        &.provider-53047faac8318c2d65000099 {
          background-image: url(/images/providers/53047faac8318c2d65000099.svg)
        }
        &.provider-53047faac8318c2d65000100 {
          background-image: url(/images/providers/53047faac8318c2d65000100.svg)
        }
        &.provider-53047faac8318c2d650001a1 {
          background-image: url(/images/providers/53047faac8318c2d650001a1.svg)
        }
        &.provider-53047faac8318c2d650001a2 {
          background-image: url(/images/providers/53047faac8318c2d650001a2.svg)
        }
        &.provider-539ef7289f240405465a2e1f {
          background-image: url(/images/providers/539ef7289f240405465a2e1f.svg)
        }
        &.provider-54622abd45aa0bf43ab0f113 {
          background-image: url(/images/providers/54622abd45aa0bf43ab0f113.svg)
        }
        &.provider-5463ba1e70e0ff7e2aa1814c {
          background-image: url(/images/providers/5463ba1e70e0ff7e2aa1814c.svg)
        }
        &.provider-54870a64b453ff0b0088b236 {
          background-image: url(/images/providers/54870a64b453ff0b0088b236.svg)
        }
      }

      a.document-snippet-link {
        width: 100%;
        display: block;
        text-decoration: none;
        color: @linkColor;

        .anyfetch-document-snippet {
          padding: .5em;

          h1.anyfetch-title {
            font-size: 1em;
            font-weight: bold;
            color: #3A3A3A;
            span.anyfetch-hlt {
              background: none;
            }
          }

          .anyfetch-date {
            font-size: .9em;
          }

          .anyfetch-participants {
            font-size: .9em;
            color: #B5B5B5;
            li.anyfetch-hlt {
              color: #2AABE0;
              background: none;
            }
          }

          main.anyfetch-content {
            margin: .4em 0;
            font-size: 1em;
            text-overflow: ellipsis;
            overflow: hidden;
            width: 100%;
            // white-space: nowrap;
            display: -webkit-box;
            -webkit-line-clamp: 2;
            -webkit-box-orient: vertical;
            // color: #0E566B;
            span.anyfetch-hlt {
              color: #3A9FD2;
              background: none;
            }
          }

          main.anyfetch-content:first-letter {
            text-transform: uppercase;
          }

          &.anyfetch-type-image {
            hgroup {
              overflow-x: hidden;
              text-overflow: ellipsis;
              white-space: nowrap;
              word-wrap: break-word;
            }
            .anyfetch-flex {
              display: flex;
              &.anyfetch-flex-row {
                flex-direction: row;
              }
            }
            figure.anyfetch-aside-image {
              margin: 0;
              margin-left: 1em;

              border: 1px solid #DBDBDB;
              padding: 2px;
              max-height: 3em;
              img {
                height: 100%;
                width: 100%;
              }
            }
          }
        }
      }

      .arrow-container {
        position: relative;
        width: 1.5em;
        .arrow-right {
          height: .45em;
          width: .45em;
          position: absolute;
          margin: auto;
          top: 0;
          bottom: 0;

          border-top: 2px solid lightgray;
          border-right: 2px solid lightgray;
          transform: rotate(45deg);
        }
      }

      &:hover {
        border: darken(#DDD, 5%) solid 1px;

        .arrow-container .arrow-right {
          border-color: gray;
        }
      }
    }
  }
}

